<resources>
    <string name="app_name">Popular Movies</string>
    <string name="loading_movies">Loading Movies…</string>
    <string name="error_loading_text">Error loading movies from the TMDB.\nCheck your Internet Connection and try again later.\nUntil then, you can look at your favourite movies by going to settings.</string>
    <string name="released_on">Released on :  </string>
    <string name="language">Language :  </string>
    <string name="popularity">Popularity :  </string>
    <string name="sort_by_label">Sort by:</string>
    <string name="popularity_label">Popularity</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="settings_label">Settings</string>
    <string name="user_rating_label">User Rating :</string>
    <string name="movie_poster_image_descr">Movie Poster Image</string>
    <string name="favourite_label">Favourites</string>

    <string name="pref_sort_key" translatable="false">sortBy</string>
    <string name="pref_sort_popularity" translatable="false">popular</string>
    <string name="pref_sort_toprated" translatable="false">toprated</string>
    <string name="pref_sort_favourite" translatable="false">favourite</string>

    <string name="movie_trailers_label">Movie Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="toggle_review_list">Toggle Review List</string>
    <string name="toggle_trailers_list">Toggle Trailers List</string>
    <string name="play_button">Play Button</string>
    <string name="error_loading_fav_text">Seems like you have no favourite movies marked.</string>
</resources>
