<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".actvities.DetailActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/posterImage"
                    android:layout_marginTop="10dp"
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/movie_poster_image_descr" />
                <LinearLayout
                    android:layout_alignTop="@id/posterImage"
                    android:layout_alignBottom="@id/posterImage"
                    android:layout_toEndOf="@id/posterImage"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/movie_title"
                            tools:text="MOVIE NAME"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/release_date_label"
                            android:text="@string/released_on"
                            android:textSize="18sp"
                            android:layout_below="@id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/release_date_tv"
                            tools:text="27 May 2020"
                            android:textSize="18sp"
                            android:layout_marginStart="5dp"
                            android:layout_below="@id/movie_title"
                            android:layout_toEndOf="@id/release_date_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/user_rating_label"
                            android:textColor="@color/colorBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/average_vote"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/language"
                            android:textColor="@color/colorBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/language"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/popularity"
                            android:textColor="@color/colorBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/popularity_tv"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:id="@+id/favourite_image"
                    android:src="@drawable/ic_favorite_border"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:layout_width="55dp"
                    android:layout_height="55dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/overview_tv"
                tools:text="OVERVIEW HERE"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:id="@+id/trailer_label_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/trailer_text_view"
                    android:text="@string/movie_trailers_label"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/trailer_toggle_image"
                    android:src="@drawable/ic_arrow_up"
                    android:layout_alignTop="@id/trailer_text_view"
                    android:layout_alignBottom="@id/trailer_text_view"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/trailer_text_view"
                    android:contentDescription="@string/toggle_trailers_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:id="@+id/review_label_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/review"
                    android:text="@string/reviews_label"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/review_toggle_image"
                    android:src="@drawable/ic_arrow_up"
                    android:layout_alignTop="@id/review"
                    android:layout_alignBottom="@id/review"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/review"
                    android:contentDescription="@string/toggle_review_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
